fixed - navigation overlap - message routing - userId being null message on details page

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -254,9 +254,9 @@ button:focus {
 .darkness {
   background-image: linear-gradient(#00000050, #00000050);
   height: 100%;
-  transition: .15s all;
-  height: 100%;
   width: 100%;
+  transition: .15s all;
+  top: 0;
   position: fixed;
 }
 
@@ -623,4 +623,8 @@ a:hover {
 
 .account-setting-text {
   font-size: .75rem;
+}
+
+.overlap {
+  z-index: 1000;
 }
